fixed navbar spacing

--- a/css-tutorial/src/app/Modules/navbar/navbar.component.css
+++ b/css-tutorial/src/app/Modules/navbar/navbar.component.css
@@ -6,7 +6,7 @@
 
 .nav-container{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     min-height: 8vh;
     background-color: #5d4954;
@@ -16,6 +16,7 @@
 .logo{
     display: flex;
     align-items: center;
+    padding-left: 1%;
 }
 
 .logo-img{
